--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SQL_SERVER;Database=InvoicingDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectionString": "Data Source=DESKTOP-M41TMJA;Initial Catalog=InvoicingDb;User id=sa;Password=mukesh;Integrated Security=True"
   }
 }
