--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=DESKTOP-M41TMJA;Initial Catalog=InvoicingDb;User id=sa;Password=mukesh;Integrated Security=True"
+    "ConnectionString": "Data Source=DESKTOP-M41TMJA;Initial Catalog=InvoicingDb;User id=sa;Password=mukesh;TrustServerCertificate=True"
   }
 }
